--- a/LB3_release.json
+++ b/LB3_release.json
@@ -1,6 +1,6 @@
 {
     "model" : "LB3",
-    "version" : "1.0.1",
-    "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.0.1_201808171424.bin",
-    "description" : "1.0.1 Release 201808171427"
+    "version" : "1.0.4",
+    "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.0.4_201811140948.bin",
+    "description" : "1.0.4 Release version to support homekit cer"
 }
