--- a/LB3_release.json
+++ b/LB3_release.json
@@ -1,6 +1,6 @@
 {
     "model" : "LB3",
-    "version" : "1.0.4",
-    "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.0.4_201811140948.bin",
-    "description" : "1.0.4 Release version to support homekit cer"
+    "version" : "1.0.5",
+    "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.0.5_201812181811.bin",
+    "description" : "Update: Optimizing HCA and HAT test error reporting"
 }
