--- a/LB3_release.json
+++ b/LB3_release.json
@@ -1,6 +1,6 @@
 {
     "model" : "LB3",
-    "version" : "1.0.6",
-    "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.0.6_201904071133.bin",
-    "description" : "更新内容：优化了复位率失败的问题（提高灯泡复位成功率）"
+    "version" : "1.1.1",
+    "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.1.1_201905291039.bin",
+    "description" : "更新内容：适用于HSR主板的固件"
 }
