--- a/LB3_release.json
+++ b/LB3_release.json
@@ -2,5 +2,5 @@
     "model" : "LB3",
     "version" : "1.1.1",
     "url" : "https://raw.githubusercontent.com/messageloop/LB3/master/1.1.1_201905291407.bin",
-    "description" : "更新内容：适用于HSR主板的固件"
+    "description" : "Update: Firmware for HSR motherboards"
 }
